--- a/main.css
+++ b/main.css
@@ -252,23 +252,56 @@ img {
   background: #222;
 }
 
+.showcase-content.form-content {
+  margin-top: 0;
+}
+
+#form {
+  background: url(./assets/bg.jpg);
+  margin-bottom: 1em;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  background: url("./assets/bg.jpg") no-repeat center center/cover;
+  background-attachment: fixed;
+}
+
+#form::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background: rgba(0, 0, 0, 0.6);
+  box-shadow: inset 120px 100px 250px #000000, inset -120px -100px 250px #000000;
+}
+
 form {
   width: 60%;
   text-align: center;
   margin: auto;
 }
 
+.form-header {
+  margin: 0 0 1em 0;
+}
+
 form input {
-  width: 50%;
+  width: 80%;
   font-size: 1em;
   padding: 1em;
   border-radius: 10px;
   border: 1px solid var(--primary-color);
   display: block;
   margin: 1em auto;
+  transition: 0.3s;
 }
 
-form input[type='']
+form input:focus {
+  width: 100%;
+}
 
 .footer {
   max-width: 70%;
