--- a/main.css
+++ b/main.css
@@ -170,6 +170,8 @@ img {
 }
 
 .tab-item {
+  border: 3px solid var(--primary-color);
+  margin: 1em 0.5em;
   height: 60vh;
   background-position: center;
   background-size: cover;
